# beyondicnn

./: .gitignore  README.md  pyproject.toml
beyondicnn/: check_convexity.py  convex_reg.py  edges_subdivision.py  models.py  utils_edge_subdiv.py  utils_viz.py
expes/: expe_convex_reg_2D.py  expe_count_convex_2D.py  expe_count_convex_depth.py  expe_count_convex_inputdim.py  plot_hist_convex_networks.py
